[gd_scene load_steps=3 format=3 uid="uid://coffahvu7dhoi"]

[ext_resource type="Script" path="res://scripts/zone.gd" id="1"]

[sub_resource type="RectangleShape2D" id="1"]
resource_local_to_scene = true
size = Vector2(800, 450)

[node name="zone" type="Area2D" groups=["zones"]]
collision_layer = 32
collision_mask = 2
script = ExtResource( "1" )

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(400, 225)
shape = SubResource( "1" )

[connection signal="body_entered" from="." to="." method="_on_zone_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_zone_body_exited"]
[connection signal="refresh" from="." to="." method="_on_zone_refresh"]
